# final

./: .gitignore  AGENTS.md  MVP_SPEC.md  PRD.md  PROJECT_SUMMARY.md  README.md  install_or_update_stocknogs.bat  install_or_update_stocknogs.ps1  pyproject.toml  start_stocknogs.bat
config/: defaults.yaml  demo.yaml  gui_sources.yaml  gui_user.yaml  scoring.yaml  universe.yaml
data/fixtures/: README.md  ohlcv_placeholder.csv
data/samples/: README.md  sample_scan_output.json
docs/: tradingview_webhook_contract.md
docs/updates/: 2026-04-05_202244_add-project-update-summary-automation.md  INDEX.md
extensions/stocknogs_thinkorswim_bridge/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
pine/: stocknogs_breakout_webhook_template.pine
scripts/: generate_sample_output.py  log_update.py  run_gui.py  run_scan.py  run_webhook_server.py  thinkorswim_manual_session_helper.js
src/analysis/: __init__.py  source_manager.py  thesis_engine.py
src/modules/: __init__.py  breakout_trigger.py  compression.py  explanation.py  quality_score.py  skip_reasons.py  trap_risk.py  trend_filter.py
src/scanner/: __init__.py  models.py  runner.py  universe.py
src/services/: __init__.py  browser_source.py  config_loader.py  gui_api.py  gui_html.py  gui_responses.py  gui_state.py  logging.py  market_data.py  ocr_screen.py  webhook_models.py  webhook_server.py
src/utils/: __init__.py  math.py  timeframes.py  validation.py
tests/fixtures/: README.md  daily_hourly_5m_breakout_insufficient.json  daily_hourly_5m_breakout_no_expansion.json  (+15 more)
(+99 files in other folders)
